# lanch-app

./: CLAUDE.md  Cargo.toml  HANDOFF.md  README.md
scripts/: create-issues.ps1
src/: clipboard_history.rs  clipboard_store.rs  clipboard_ui.rs  config.rs  formatter.rs  main.rs  notification.rs  popup.rs  spinner.rs  tray.rs
